# graph_embedding_1

./: .flake8  .gitignore  .pre-commit-config.yaml  .pydocstyle.ini  pyproject.toml  pyrightconfig.json
data/: AID_450_datatable_all.csv
src/: data_processing.py  embedding.py  main.py  training.py
